# MapThis

./: CMakeLists.txt  CMakePresets.json
MapThis/: CMakeLists.txt  main.cpp
MapThis/map_mem/: BinaryHelper.h  Headers.h  MapMem.cpp  MapMem.h
MapThis/utils/: WithText.h
TestProject/: CMakeLists.txt  test_main.cpp
